# coop

./: .coverage  .gitignore  README.md  coop_current_state.md  docs-README.md  project-init.md  pyproject.toml
.github/copilot/: status.md
.github/copilot/log/: 2026-03-19-T001.md  2026-03-19-T002.md  2026-03-19-T003.md  2026-03-21-T001.md  2026-03-25-T001.md
_discontinued/: README.md
_discontinued/specs/: oop-as-core.md
_discontinued/specs/docs-legacy/: how-to-build-a-module.md
docs/: spec-core-dependencies.md
docs/contracts/: module-manifest-and-handshake-standard.md
docs/model/: agent-definitions-system-and-workflow.md  agent-model-clarification-critical.md  answers-clarified-spec.md  topics-you-asked-for-structured.md
docs/runtime/: agent-execution-rules-sandbox.md
docs/workers/: README.md  worker-init-prompt-short.md  worker-init-prompt-standard.md
examples/sweden/agents/: se-normalizer.agent.json  se-search.agent.json  se-source-fetcher.agent.json
examples/sweden/contracts/: connection_profile.schema.json  source_record.schema.json
examples/sweden/scripts/: se-normalizer.py  se-search.py  se-source-fetcher.py
handlers/: api.py  terminal.py
modules/restapi/: README.md  status.md  sweden-api-ingest-status.md
schema/: manifest.schema.json
src/coop/: __init__.py  events.py  manifest.py  runner.py
src/coop/handlers/: api.py
tests/: test_agent.py  test_events.py  test_handler.py  test_manifest.py  test_registry.py  test_runner.py  test_terminal.py
xCOOP/xCOOP/: ContentView.swift  xCOOPApp.swift
xCOOP/xCOOP.xcodeproj/: project.pbxproj
(+34 files in other folders)
