[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "coop"
version = "0.1.0"
description = "Cooperative agent SDK — run agents, handle any traffic type"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "fastapi>=0.110",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov"]
api = ["uvicorn>=0.29"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "src"]
